<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MoCo App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="friendList">Freundesliste</string>
    <string name="addFriend">Freund hinzufügen</string>
    <string name="undefined">UNDEFINED</string>
    <string name="chatpartner">Chatpartner:</string>
    <string name="sendMessage">Nachricht senden</string>
    <string name="register">Registrieren</string>
    <string name="gameList">Spieleliste</string>
    <string name="compass">Navigation</string>
    <string name="navigateTo">Navigiere zu</string>
    <string name="poiList">POI Liste</string>
    <string name="rock">Stein</string>
    <string name="paper">Papier</string>
    <string name="scissors">Schere</string>
    <string name="spock">Spock</string>
    <string name="lizard">Echse</string>
    <string name="playAgain">Noch eine Runde</string>
    <string name="navigateToPoi">Navigiere zu POI</string>
</resources>
