<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@drawable/bg_rpssl">
    <TextView android:id="@+id/gameState" android:text="N/A" android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>
    <Button android:id="@+id/rockButton" android:text="@string/rock" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:visibility="invisible"/>
    <Button android:id="@+id/paperButton" android:text="@string/paper" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:visibility="invisible"/>
    <Button android:id="@+id/scissorsButton" android:text="@string/scissors" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:visibility="invisible"/>
    <Button android:id="@+id/spockButton" android:text="@string/spock" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:visibility="invisible"/>
    <Button android:id="@+id/lizardButton" android:text="@string/lizard" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:visibility="invisible"/>
    <TextView android:id="@+id/rpsslResult" android:text="N/A" android:layout_width="fill_parent"
              android:layout_height="wrap_content" android:visibility="invisible"/>
    <Button android:id="@+id/playAgain" android:text="@string/playAgain" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:visibility="invisible"/>
</LinearLayout>