<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@drawable/bg">
    <TextView android:text="@string/username" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
    <EditText android:id="@+id/username" android:inputType="text" android:layout_height="wrap_content"
              android:layout_width="fill_parent"/>
    <TextView android:text="@string/password" android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
    <EditText android:id="@+id/password" android:inputType="textPassword" android:layout_height="wrap_content"
              android:layout_width="fill_parent"/>
    <Button android:id="@+id/loginButton" android:text="@string/login" android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    <Button android:id="@+id/registerButton" android:text="@string/register" android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    <TextView android:id="@+id/loginResult" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
</LinearLayout>