<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content" android:text="@string/chatpartner"/>
    <TextView android:id="@+id/chatPartner" android:layout_width="wrap_content"
              android:layout_height="wrap_content" android:text="@string/undefined"/>
    <ListView android:id="@+id/chat" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
    <Button android:id="@+id/sendMessage" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/sendMessage"/>
</LinearLayout>